--- a/lesson18/lesson18_1.ipynb
+++ b/lesson18/lesson18_1.ipynb
@@ -85,6 +85,128 @@
     "df4 = df3.drop(index=0)\n",
     "df4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1d636e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6688cce0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def string_to_int(value:str):\n",
+    "    try:\n",
+    "        v = int(value)\n",
+    "        return v\n",
+    "    except Exception:\n",
+    "        return 0\n",
+    "\n",
+    "# Convert the \"年底人口數\" and \"人口密度\" columns to integers (int整數)\n",
+    "\n",
+    "# map 或是 apply 都可以\n",
+    "\n",
+    "df4[\"年底人口數\"] = df4[\"年底人口數\"].map(string_to_int)\n",
+    "df4[\"人口密度\"] = df4[\"人口密度\"].apply(string_to_int)\n",
+    "\n",
+    "df4.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7347c72d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4['土地面積'] = df4['土地面積'].astype(float) # 將土地面積轉換為浮點數    \n",
+    "\n",
+    "df4.info()\n",
+    "\n",
+    "df4\n",
+    "# df4.to_csv(\"各鄉鎮市區人口密度_cleaned.csv\", index=False, encoding=\"utf-8-sig\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b96cc19d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 要確認方法\n",
+    "\n",
+    "df4.loc[:2] # Accessing the third row (index 2) of the DataFrame\n",
+    "df4\n",
+    "\n",
+    "df4.iloc[2] # Accessing the third row (index 2) of the DataFrame using iloc\n",
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7654419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_words(v:str):\n",
+    "    if len(v) == 6:\n",
+    "        return v[:3]\n",
+    "    else:\n",
+    "        return v\n",
+    "\n",
+    "df4[\"縣市\"] = df4['區域別'].map(split_words)\n",
+    "\n",
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd2158c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_area(v:str):\n",
+    "    if len(v) == 6:\n",
+    "        return v[-3:]\n",
+    "    else:\n",
+    "        return v\n",
+    "df4['區域別'] = df4['區域別'].map(split_area)\n",
+    "\n",
+    "df4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7a6b589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df5 = df4.reindex(columns=[\"區域別\",\"縣市\",\"年底人口數\",\"土地面積\",\"人口密度\"])\n",
+    "df6 = df5.set_index('區域別')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0078c72c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6.to_excel('各鄉鎮市區人口密度.xlsx',index=True)"
+   ]
   }
  ],
  "metadata": {
