--- a/lesson18/lesson18_1.ipynb
+++ b/lesson18/lesson18_1.ipynb
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "id": "b96cc19d",
    "metadata": {},
    "outputs": [
@@ -1236,17 +1236,65 @@
        "      <td>16.3170</td>\n",
        "      <td>23747</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>新北市中和區</td>\n",
+       "      <td>413590</td>\n",
+       "      <td>20.1440</td>\n",
+       "      <td>20532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>新北市永和區</td>\n",
+       "      <td>222585</td>\n",
+       "      <td>5.7138</td>\n",
+       "      <td>38956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>新北市新莊區</td>\n",
+       "      <td>416524</td>\n",
+       "      <td>19.7383</td>\n",
+       "      <td>21102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>新北市新店區</td>\n",
+       "      <td>302089</td>\n",
+       "      <td>120.2255</td>\n",
+       "      <td>2513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>新北市樹林區</td>\n",
+       "      <td>184149</td>\n",
+       "      <td>33.1288</td>\n",
+       "      <td>5559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>新北市鶯歌區</td>\n",
+       "      <td>86593</td>\n",
+       "      <td>21.1248</td>\n",
+       "      <td>4099</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      區域別   年底人口數     土地面積   人口密度\n",
-       "1  新北市板橋區  551480  23.1373  23835\n",
-       "2  新北市三重區  387484  16.3170  23747"
+       "      區域別   年底人口數      土地面積   人口密度\n",
+       "1  新北市板橋區  551480   23.1373  23835\n",
+       "2  新北市三重區  387484   16.3170  23747\n",
+       "3  新北市中和區  413590   20.1440  20532\n",
+       "4  新北市永和區  222585    5.7138  38956\n",
+       "5  新北市新莊區  416524   19.7383  21102\n",
+       "6  新北市新店區  302089  120.2255   2513\n",
+       "7  新北市樹林區  184149   33.1288   5559\n",
+       "8  新北市鶯歌區   86593   21.1248   4099"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1303,10 @@
     "# 要確認方法\n",
     "\n",
     "# This will return the second row of the DataFrame as a Series\n",
-    "df7 = df4.iloc[:2]  # Accessing the second row (index 1) of the DataFrame using iloc\n",
+    "df7 = df4.loc[:8]  # 取前9行\n",
+    "# This will return the first 9 rows of the DataFrame\n",
+    "df7 = df4.iloc[:9]  # 取前9行\n",
+    "# This will return the first 9 rows of the DataFrame as a new DataFrame \n",
     "df7\n",
     "\n"
    ]
