--- a/lesson18/lesson18_2.ipynb
+++ b/lesson18/lesson18_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "d0404602",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "[370 rows x 4 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "8db1daaf",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "中間數   30684.000000    53.416900    627.500000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,6 +257,148 @@
     "    return pd.Series([s.mean(),s.max(),s.min(),s.std(),s.median()],index=['平均','最高','最低','標準差','中間數'])\n",
     "\n",
     "df1.apply(statistic,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f523eaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "區域別\n",
+       "板橋區    551480\n",
+       "Name: 年底人口數, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0083fa69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>年底人口數</th>\n",
+       "      <th>土地面積</th>\n",
+       "      <th>人口密度</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>平均</th>\n",
+       "      <td>63706.018919</td>\n",
+       "      <td>97.829911</td>\n",
+       "      <td>2754.002703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>最高</th>\n",
+       "      <td>551480</td>\n",
+       "      <td>1641.8555</td>\n",
+       "      <td>38956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>最高縣市</th>\n",
+       "      <td>板橋區</td>\n",
+       "      <td>秀林鄉</td>\n",
+       "      <td>永和區</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>最低</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5045</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>最低縣市</th>\n",
+       "      <td>東沙群島</td>\n",
+       "      <td>南沙群島</td>\n",
+       "      <td>東沙群島</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>標準差</th>\n",
+       "      <td>82886.532344</td>\n",
+       "      <td>179.833241</td>\n",
+       "      <td>5578.346233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>中間數</th>\n",
+       "      <td>30684.0</td>\n",
+       "      <td>53.4169</td>\n",
+       "      <td>627.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             年底人口數        土地面積         人口密度\n",
+       "平均    63706.018919   97.829911  2754.002703\n",
+       "最高          551480   1641.8555        38956\n",
+       "最高縣市           板橋區         秀林鄉          永和區\n",
+       "最低               0      0.5045            0\n",
+       "最低縣市          東沙群島        南沙群島         東沙群島\n",
+       "標準差   82886.532344  179.833241  5578.346233\n",
+       "中間數        30684.0     53.4169        627.5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df1 = df[[\"年底人口數\",\"土地面積\",\"人口密度\"]]\n",
+    "\n",
+    "def statistic(s):\n",
+    "    max_city = s[s == s.max()].index[0]\n",
+    "    min_city = s[s == s.min()].index[0]\n",
+    "    return pd.Series([s.mean(),s.max(),max_city,s.min(),min_city,s.std(),s.median()],\n",
+    "                     index=['平均','最高','最高縣市','最低','最低縣市','標準差','中間數'])\n",
+    "\n",
+    "df1.apply(statistic,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c6b5d67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1['年底人口數'][df1['年底人口數'] == 551480] # 找出年底人口數為551480的縣市\n",
+    "df1['土地面積'][df1['土地面積'] == 1045.0] # 找出土地面積為1045.0的縣市\n",
+    "df1['人口密度'][df1['人口密度'] == 526.0] # 找出人口密度為526.0的縣市\n",
+    "df1['人口密度'][df1['人口密度'] == 0.0  ] # 找出人口密度為0.0的縣市"
    ]
   }
  ],
