--- a/lesson18/lesson18_2.ipynb
+++ b/lesson18/lesson18_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d0404602",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_excel('各鄉鎮市區人口密度.xlsx',index_col=0)\n",
+    "df = pd.read_excel('各鄉鎮市區人口密度.xlsx',index_col=0) #讀取Excel檔案\n",
+    "df = df.dropna()  # 刪除有缺失值的行\n",
     "df"
    ]
   },
