--- a/lesson18/lesson18_1.ipynb
+++ b/lesson18/lesson18_1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "id": "2f0b9a33",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "[376 rows x 5 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "id": "ed7d1e04",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "[376 rows x 5 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "id": "14eb2ccb",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "[376 rows x 5 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "id": "08a1755f",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
        "[376 rows x 4 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "id": "b69df4e1",
    "metadata": {},
    "outputs": [
@@ -796,7 +796,7 @@
        "[371 rows x 4 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "id": "bc6c3de6",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
        "[370 rows x 4 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "id": "b1d636e6",
    "metadata": {},
    "outputs": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "id": "6688cce0",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "id": "7347c72d",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1174,7 @@
        "[370 rows x 4 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,111 +1190,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b96cc19d",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>區域別</th>\n",
-       "      <th>年底人口數</th>\n",
-       "      <th>土地面積</th>\n",
-       "      <th>人口密度</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>新北市板橋區</td>\n",
-       "      <td>551480</td>\n",
-       "      <td>23.1373</td>\n",
-       "      <td>23835</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>新北市三重區</td>\n",
-       "      <td>387484</td>\n",
-       "      <td>16.3170</td>\n",
-       "      <td>23747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>新北市中和區</td>\n",
-       "      <td>413590</td>\n",
-       "      <td>20.1440</td>\n",
-       "      <td>20532</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>新北市永和區</td>\n",
-       "      <td>222585</td>\n",
-       "      <td>5.7138</td>\n",
-       "      <td>38956</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>新北市新莊區</td>\n",
-       "      <td>416524</td>\n",
-       "      <td>19.7383</td>\n",
-       "      <td>21102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>新北市新店區</td>\n",
-       "      <td>302089</td>\n",
-       "      <td>120.2255</td>\n",
-       "      <td>2513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>新北市樹林區</td>\n",
-       "      <td>184149</td>\n",
-       "      <td>33.1288</td>\n",
-       "      <td>5559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>新北市鶯歌區</td>\n",
-       "      <td>86593</td>\n",
-       "      <td>21.1248</td>\n",
-       "      <td>4099</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      區域別   年底人口數      土地面積   人口密度\n",
-       "1  新北市板橋區  551480   23.1373  23835\n",
-       "2  新北市三重區  387484   16.3170  23747\n",
-       "3  新北市中和區  413590   20.1440  20532\n",
-       "4  新北市永和區  222585    5.7138  38956\n",
-       "5  新北市新莊區  416524   19.7383  21102\n",
-       "6  新北市新店區  302089  120.2255   2513\n",
-       "7  新北市樹林區  184149   33.1288   5559\n",
-       "8  新北市鶯歌區   86593   21.1248   4099"
+       "1      新北市板橋區\n",
+       "2      新北市三重區\n",
+       "3      新北市中和區\n",
+       "4      新北市永和區\n",
+       "5      新北市新莊區\n",
+       "        ...  \n",
+       "366    連江縣北竿鄉\n",
+       "367    連江縣莒光鄉\n",
+       "368    連江縣東引鄉\n",
+       "369      東沙群島\n",
+       "370      南沙群島\n",
+       "Name: 區域別, Length: 370, dtype: object"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,9 +1222,9 @@
     "# This will return the second row of the DataFrame as a Series\n",
     "df7 = df4.loc[:8]  # 取前9行\n",
     "# This will return the first 9 rows of the DataFrame\n",
-    "df7 = df4.iloc[:9]  # 取前9行\n",
+    "df8 = df4.iloc[:,0]  #  取第一列的所有行\n",
     "# This will return the first 9 rows of the DataFrame as a new DataFrame \n",
-    "df7\n",
+    "df8\n",
     "\n"
    ]
   },
@@ -1370,7 +1287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
