--- a/lesson19/lesson19_3.ipynb
+++ b/lesson19/lesson19_3.ipynb
@@ -100,6 +100,38 @@
    "id": "78b0c4cd",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df1.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a787aa8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1['日期'] = pd.to_datetime(df1['日期'].astype(str)) #轉換為日期格式\n",
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f2c3329",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df1.set_index('日期') # 將日期設為索引\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb45b34b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
