--- a/lesson20/lesson20_2.ipynb
+++ b/lesson20/lesson20_2.ipynb
@@ -2,91 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4e061f39",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>key1</th>\n",
-       "      <th>key2</th>\n",
-       "      <th>data1</th>\n",
-       "      <th>data2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>a</td>\n",
-       "      <td>one</td>\n",
-       "      <td>-1.290161</td>\n",
-       "      <td>0.756015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>a</td>\n",
-       "      <td>two</td>\n",
-       "      <td>-0.316766</td>\n",
-       "      <td>0.060264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>b</td>\n",
-       "      <td>one</td>\n",
-       "      <td>-1.322666</td>\n",
-       "      <td>-0.173157</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>b</td>\n",
-       "      <td>two</td>\n",
-       "      <td>0.248203</td>\n",
-       "      <td>-1.239806</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>a</td>\n",
-       "      <td>one</td>\n",
-       "      <td>0.528369</td>\n",
-       "      <td>0.893573</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  key1 key2     data1     data2\n",
-       "0    a  one -1.290161  0.756015\n",
-       "1    a  two -0.316766  0.060264\n",
-       "2    b  one -1.322666 -0.173157\n",
-       "3    b  two  0.248203 -1.239806\n",
-       "4    a  one  0.528369  0.893573"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -100,150 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c2d1de58",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>data1</th>\n",
-       "      <th>data2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>key1</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>-1.078558</td>\n",
-       "      <td>1.709852</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>-1.074463</td>\n",
-       "      <td>-1.412963</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         data1     data2\n",
-       "key1                    \n",
-       "a    -1.078558  1.709852\n",
-       "b    -1.074463 -1.412963"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.groupby(by=\"key1\")[['data1','data2']].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aff4a6db",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>data</th>\n",
-       "      <th>data1</th>\n",
-       "      <th>data2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>key1</th>\n",
-       "      <th>key2</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">a</th>\n",
-       "      <th>one</th>\n",
-       "      <td>-0.761792</td>\n",
-       "      <td>1.649588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>-0.316766</td>\n",
-       "      <td>0.060264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">b</th>\n",
-       "      <th>one</th>\n",
-       "      <td>-1.322666</td>\n",
-       "      <td>-0.173157</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>0.248203</td>\n",
-       "      <td>-1.239806</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "data          data1     data2\n",
-       "key1 key2                    \n",
-       "a    one  -0.761792  1.649588\n",
-       "     two  -0.316766  0.060264\n",
-       "b    one  -1.322666 -0.173157\n",
-       "     two   0.248203 -1.239806"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1 = df.groupby(by=['key1','key2']).sum()\n",
     "df1.columns.name = \"data\"\n",
@@ -252,88 +41,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c7950086",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>key2</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">one</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">two</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>data</th>\n",
-       "      <th>data1</th>\n",
-       "      <th>data2</th>\n",
-       "      <th>data1</th>\n",
-       "      <th>data2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>key1</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>-0.761792</td>\n",
-       "      <td>1.649588</td>\n",
-       "      <td>-0.316766</td>\n",
-       "      <td>0.060264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>-1.322666</td>\n",
-       "      <td>-0.173157</td>\n",
-       "      <td>0.248203</td>\n",
-       "      <td>-1.239806</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "key2       one                 two          \n",
-       "data     data1     data2     data1     data2\n",
-       "key1                                        \n",
-       "a    -0.761792  1.649588 -0.316766  0.060264\n",
-       "b    -1.322666 -0.173157  0.248203 -1.239806"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "df1.stack().unstack(level=['key2','data'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84c529b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.groupby(by=['key1','key2']).agg([(\"加總\",\"sum\")])\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fda2188f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.groupby(by=['key1','key2']).agg([(\"加總\",\"sum\"),(\"平均\",\"mean\")])\n",
+    "df1"
    ]
   }
  ],
