--- a/lesson22/lesson22_1.ipynb
+++ b/lesson22/lesson22_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1ff6dbad",
    "metadata": {},
    "outputs": [
@@ -48,6 +48,8 @@
     "from google import genai\n",
     "\n",
     "load_dotenv()\n",
+    "# Initialize the GenAI client\n",
+    "# Make sure you have set the GOOGLE_APPLICATION_CREDENTIALS environment variable\n",
     "client = genai.Client()\n",
     "response = client.models.generate_content(\n",
     "    model=\"gemini-2.5-flash\", contents=\"天空為什麼是藍的\"\n",
